--- a/QuizzWP/src/container/playQuizz/playQuizz.css
+++ b/QuizzWP/src/container/playQuizz/playQuizz.css
@@ -1,5 +1,14 @@
 .img {
-  height: 200px;
-  display: block;
-  margin: 0 auto;
+	height: 200px;
+	margin-bottom: 15px;
+}
+
+.questionCard {
+	border: solid 1px black;
+	border-radius: 20px;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	padding: 10px;
+	padding-left: 20px;
+	padding-right: 20px;
+	background-image: linear-gradient(180deg, #fc6569 0%, #f965fc 100%);
 }
