correcting async call for WP implementation + adjusting css

--- a/QuizzWP/src/container/playQuizz/playQuizz.css
+++ b/QuizzWP/src/container/playQuizz/playQuizz.css
@@ -11,4 +11,7 @@
 	padding-left: 20px;
 	padding-right: 20px;
 	background-image: linear-gradient(180deg, #fc6569 0%, #f965fc 100%);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
