--- a/QuizzWP/src/component/DisplayQuizz/displayQuizz.css
+++ b/QuizzWP/src/component/DisplayQuizz/displayQuizz.css
@@ -14,6 +14,9 @@
 	color: black;
 	min-width: 400px;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .quizzListContainer {
