--- a/QuizzWP/src/component/auth/login.css
+++ b/QuizzWP/src/component/auth/login.css
@@ -5,10 +5,12 @@
 	padding: 40px;
 	border-radius: 10px;
 	background-image: linear-gradient(180deg, #fc6569 0%, #f965fc 100%);
+	align-items: center;
 }
 
 .form {
 	display: flex;
 	flex-direction: column;
 	gap: 24px;
+	align-items: center;
 }
